--- a/.travis.yml
+++ b/.travis.yml
@@ -7,12 +7,16 @@ python:
 env:
     # pypy takes longer to start
     - PRETZEL_TEST_TIMEOUT=15
+install:
+    pip install coveralls --use-mirrors
 before_script:
     # ssh login on localhost
     - ssh-keygen -f ~/.ssh/id_rsa -N ""
     - cp ~/.ssh/{id_rsa.pub,authorized_keys}
 script:
     - cd ..
-    - python -munittest pretzel
+    - coverage run -m unittest pretzel
+after_success:
+    coveralls
 notifications:
     email: false
