--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ python:
     - pypy
 env:
     # pypy takes longer to start
-    - PRETZEL_TEST_TIMEOUT=15
+    - PRETZEL_TEST_TIMEOUT=30
 install:
     pip install coveralls --use-mirrors
 before_script:
@@ -16,6 +16,8 @@ before_script:
 script:
     - cd ..
     - coverage run -m unittest pretzel
+    - mv .coverage pretzel
+    - cd pretzel
 after_success:
     coveralls
 notifications:
