--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,8 @@ python:
     - 2.7
     - 3.2
     - 3.3
-    - pypy
+    # exclude pypy for now (see build 7, 11)
+    #- pypy
 env:
     # pypy takes longer to start
     - PRETZEL_TEST_TIMEOUT=30
