--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ before_script:
 script:
     - cd ..
     # do not run coverage on pypy
-    - "if [[ $TRAVIS_PYTHON_VERSION != 'pypy' ]]; then python -mpretzel.tests -c; else python -mpretzel.tests; fi"
+    - "if [[ $TRAVIS_PYTHON_VERSION != 'pypy' ]]; then coverage -m unittest pretzel; else python -m unittest pretzel; fi"
     - "test -f .coverage && mv .coverage pretzel || true"
     - cd pretzel
 after_success:
