--- a/.travis.yml
+++ b/.travis.yml
@@ -15,9 +15,10 @@ before_script:
     - cp ~/.ssh/{id_rsa.pub,authorized_keys}
 script:
     - cd ..
+    - cp pretzel/.coveragerc ./
     # do not run coverage on pypy
-    - "if [[ $TRAVIS_PYTHON_VERSION != 'pypy' ]]; then coverage -m unittest pretzel; else python -m unittest pretzel; fi"
-    - "test -f .coverage && mv .coverage pretzel || true"
+    - "if [[ $TRAVIS_PYTHON_VERSION != 'pypy' ]]; then coverage run -m unittest pretzel; else python -m unittest pretzel; fi"
+    - "test -f .coverage && coverage report && mv .coverage pretzel || true"
     - cd pretzel
 after_success:
     "test -f .coverage && coveralls || true"
