--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ env:
     - PRETZEL_TEST_TIMEOUT=30
 install:
     pip install coveralls --use-mirrors
+    pip install greenlet --use-mirrors
 before_script:
     # ssh login on localhost
     - ssh-keygen -f ~/.ssh/id_rsa -N ""
