--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,8 @@ before_script:
     # ssh login on localhost
     - ssh-keygen -f ~/.ssh/id_rsa -N ""
     - cp ~/.ssh/{id_rsa.pub,authorized_keys}
+    # show listening ports
+    - "netstat -tan | grep LISTEN"
 script:
     - cd ..
     - cp pretzel/.coveragerc ./
