--- a/.travis.yml
+++ b/.travis.yml
@@ -11,12 +11,11 @@ install:
     - pip install coveralls --use-mirrors
     - pip install greenlet --use-mirrors
 before_script:
-    - ssh-add -D
     - ssh-keygen -R localhost
     - ssh-keygen -f ~/.ssh/id_rsa -N ""
     - cp ~/.ssh/{id_rsa.pub,authorized_keys}
     - "netstat -tan | grep LISTEN"
-    - "ssh -oBatchMode=yes localhost true"
+    - "ssh -v -oBatchMode=yes localhost true"
 script:
     - cd ..
     - cp pretzel/.coveragerc ./
