--- a/.travis.yml
+++ b/.travis.yml
@@ -18,10 +18,12 @@ before_script:
     - "ssh -v -oBatchMode=yes -oStrictHostKeyChecking=no localhost true"
 script:
     - cd ..
+    # tests and coverage
     - cp pretzel/.coveragerc ./
-    # do not run coverage on pypy
     - "if [[ $TRAVIS_PYTHON_VERSION != 'pypy' ]]; then coverage run -m unittest pretzel; else python -m unittest pretzel; fi"
     - "test -f .coverage && coverage report && mv .coverage pretzel || true"
+    # small benchmark
+    - python -mpretzel.bench
     - cd pretzel
 after_success:
     "test -f .coverage && coveralls || true"
