--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,7 @@ before_script: |
 
 script: |
     cd ..
+    export PYTHONPATH=`pwd`
     if [[ $TRAVIS_PYTHON_VERSION != 'pypy' ]]; then
         cp pretzel/.coveragerc ./
         coverage run -m unittest pretzel
