--- a/.travis.yml
+++ b/.travis.yml
@@ -2,10 +2,9 @@ language: python
 
 python:
     - 2.7
-    - 3.2
-    - 3.3
     - 3.4
     - pypy
+    - pypy3
 
 env:
     global:
@@ -28,7 +27,7 @@ before_script: |
 script: |
     cd ..
     export PYTHONPATH=`pwd`
-    if [[ $TRAVIS_PYTHON_VERSION != 'pypy' ]]; then
+    if [[ $TRAVIS_PYTHON_VERSION =~ ^pypy* ]]; then
         cp pretzel/.coveragerc ./
         echo :: UNITTESTS
         coverage run -m unittest pretzel || exit 1
