--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,11 @@
 language: python
 
 python:
-    - 2.7
-    - 3.6
-    - 3.7
-    - pypy
-    - pypy3
+    - "2.7"
+    - "3.6"
+    - "3.7-dev"
+    - "pypy"
+    - "pypy3"
 
 env:
     global:
